--- a/src/styles/BlogSection.module.scss
+++ b/src/styles/BlogSection.module.scss
@@ -37,7 +37,7 @@
       }
       p {
         mix-blend-mode: normal;
-        background-color: #cf9fff;
+        background-color: #975bd3;
       }
     }
   }
