--- a/src/styles/ProjectSection.module.scss
+++ b/src/styles/ProjectSection.module.scss
@@ -6,6 +6,7 @@
   width: 100%;
   display: flex;
   flex-direction: column;
+  background-color: transparent;
 
   .header {
     // mix-blend-mode: difference;
