--- a/src/styles/BlogSection.module.scss
+++ b/src/styles/BlogSection.module.scss
@@ -26,12 +26,12 @@
 
     h1 {
       mix-blend-mode: difference;
-      z-index: 100;
+      // z-index: 100;
     }
 
     p {
       mix-blend-mode: difference;
-      z-index: 100;
+      // z-index: 100;
     }
 
     &:hover {
