--- a/src/styles/ProfileSection.module.scss
+++ b/src/styles/ProfileSection.module.scss
@@ -9,7 +9,7 @@
   padding: 0px;
   position: relative;
   mix-blend-mode: difference;
-  z-index: 100;
+  // z-index: 100;
 
   #profileSection__name {
     font-family: "primaryFont";
