--- a/src/styles/ProjectSection.module.scss
+++ b/src/styles/ProjectSection.module.scss
@@ -31,7 +31,7 @@
       width: 100%;
       align-items: center;
       mix-blend-mode: difference;
-      z-index: 100;
+      // z-index: 100;
 
       #arrow {
         font-size: 60px;
