--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,5 +1,11 @@
 @import "./Breakpoints.scss";
 
+html,
+body {
+  width: auto !important;
+  overflow-x: hidden !important;
+}
+
 body {
   margin: 0;
   padding: 0px;
