--- a/src/styles/AboutMeSection.module.scss
+++ b/src/styles/AboutMeSection.module.scss
@@ -8,7 +8,7 @@
   justify-content: start;
   background-color: $bg;
   flex-direction: column;
-  // background-color: orange;
+  background-color: orange;
 
   h2 {
     line-height: 150%;
