--- a/src/styles/BlogSection.module.scss
+++ b/src/styles/BlogSection.module.scss
@@ -6,6 +6,7 @@
   width: 100%;
   display: flex;
   flex-direction: column;
+  background-color: antiquewhite;
   // background-color: orange;
 
   .header {
