--- a/src/styles/ProjectSection.module.scss
+++ b/src/styles/ProjectSection.module.scss
@@ -6,7 +6,7 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-  background-color: transparent;
+  background-color: palegreen;
 
   .header {
     // mix-blend-mode: difference;
