--- a/src/styles/ProjectSection.module.scss
+++ b/src/styles/ProjectSection.module.scss
@@ -1,12 +1,16 @@
 @import "./Breakpoints.scss";
 
 .projectsSection {
-  padding: 100px 1% 50px 1%;
+  padding: 100px 2% 50px 2%;
   box-sizing: border-box;
   width: 100%;
   display: flex;
   flex-direction: column;
-  background-color: palegreen;
+  background-color: transparent;
+
+  @include breakpoint-mixin("laptop-small") {
+    padding: 100px 1% 50px 1%;
+  }
 
   .header {
     // mix-blend-mode: difference;
@@ -32,6 +36,7 @@
       align-items: center;
       mix-blend-mode: difference;
       z-index: 100;
+      word-break: break-all;
 
       #arrow {
         font-size: 60px;
