--- a/src/styles/BlogSection.module.scss
+++ b/src/styles/BlogSection.module.scss
@@ -1,12 +1,16 @@
 @import "./Breakpoints.scss";
 
 .BlogSection {
-  padding: 100px 1% 0px 1%;
+  padding: 100px 2% 50px 2%;
   box-sizing: border-box;
   width: 100%;
   display: flex;
   flex-direction: column;
-  background-color: antiquewhite;
+  background-color: transparent;
+
+  @include breakpoint-mixin("laptop-small") {
+    padding: 100px 1% 0px 1%;
+  }
   // background-color: orange;
 
   .header {
