--- a/src/styles/ProfileSection.module.scss
+++ b/src/styles/ProfileSection.module.scss
@@ -8,7 +8,9 @@
   justify-content: center;
   padding: 0px;
   position: relative;
+  mix-blend-mode: difference;
   background-color: transparent;
+  z-index: 100;
 
   #profileSection__name {
     font-family: "primaryFont";
@@ -17,7 +19,6 @@
     top: 10px;
     cursor: pointer;
     left: 2%;
-    mix-blend-mode: difference;
 
     @include breakpoint-mixin("laptop-small") {
       left: 1%;
@@ -28,7 +29,6 @@
     margin-left: 2%;
     width: 80%;
     line-height: 110%;
-    mix-blend-mode: difference;
 
     @include breakpoint-mixin("laptop-small") {
       margin-left: 1%;
