--- a/src/styles/BlogSection.module.scss
+++ b/src/styles/BlogSection.module.scss
@@ -23,20 +23,15 @@
     width: 100%;
     cursor: pointer;
     padding: 20px 0px;
-    // z-index: 100;
 
     @include breakpoint-mixin("laptop-small") {
       padding: 10px 0px;
     }
 
-    h1 {
-      mix-blend-mode: difference;
-      // z-index: 100;
-    }
-
+    h1,
     p {
       mix-blend-mode: difference;
-      // z-index: 100;
+      z-index: 100;
     }
 
     &:hover {
