--- a/src/styles/ProjectSection.module.scss
+++ b/src/styles/ProjectSection.module.scss
@@ -44,9 +44,21 @@
         transition: transform 0.3s ease-in-out;
       }
 
-      &:hover {
-        h1 {
-          border-bottom: 5px solid white;
+      @include breakpoint-mixin("laptop-small") {
+        &:hover {
+          h1 {
+            border-bottom: 5px solid white;
+            transition: all 0.3s ease-in-out;
+            font-size: 90px;
+          }
+        }
+      }
+
+      @include breakpoint-mixin("desktop") {
+        &:hover {
+          h1 {
+            font-size: 110px;
+          }
         }
       }
     }
