Removing scroll bar

--- a/src/styles/BlogLandingPage.module.scss
+++ b/src/styles/BlogLandingPage.module.scss
@@ -8,16 +8,18 @@
   padding-bottom: 50px;
 }
 
-.page::-webkit-scrollbar {
-  height: 100%;
-  background-color: rgb(45, 41, 41);
-  width: 10px;
-}
+@include breakpoint-mixin("laptop-small") {
+  .page::-webkit-scrollbar {
+    height: 100%;
+    background-color: rgb(45, 41, 41);
+    width: 10px;
+  }
 
-.page::-webkit-scrollbar-thumb {
-  background-color: rgba(70, 68, 68, 0.428);
-  border: 1px solid transparent;
-  background-clip: content-box;
-  border-radius: 10px;
-  height: 40px;
+  .page::-webkit-scrollbar-thumb {
+    background-color: rgba(70, 68, 68, 0.428);
+    border: 1px solid transparent;
+    background-clip: content-box;
+    border-radius: 10px;
+    height: 40px;
+  }
 }
