--- a/src/styles/Main.module.scss
+++ b/src/styles/Main.module.scss
@@ -1,3 +1,5 @@
+@import "./Breakpoints.scss";
+
 .main {
   overflow-y: scroll;
   height: 100dvh;
@@ -5,16 +7,18 @@
   z-index: 100;
 }
 
-.main::-webkit-scrollbar {
-  height: 100%;
-  background-color: rgb(45, 41, 41);
-  width: 10px;
-}
+@include breakpoint-mixin("laptop-small") {
+  .main::-webkit-scrollbar {
+    height: 100%;
+    background-color: rgb(45, 41, 41);
+    width: 10px;
+  }
 
-.main::-webkit-scrollbar-thumb {
-  background-color: rgba(70, 68, 68, 0.428);
-  border: 1px solid transparent;
-  background-clip: content-box;
-  border-radius: 10px;
-  height: 40px;
+  .main::-webkit-scrollbar-thumb {
+    background-color: rgba(70, 68, 68, 0.428);
+    border: 1px solid transparent;
+    background-clip: content-box;
+    border-radius: 10px;
+    height: 40px;
+  }
 }
