--- a/src/styles/Main.module.scss
+++ b/src/styles/Main.module.scss
@@ -5,6 +5,18 @@
   height: 100dvh;
   width: 100%;
   z-index: 100;
+
+  background-image: url("../../public/Resources/towel.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: 20% 60%;
+  background-attachment: fixed;
+  //
+
+  @include breakpoint-mixin("laptop-small") {
+    background-repeat: repeat;
+    background-size: 350px;
+  }
 }
 
 @include breakpoint-mixin("laptop-small") {
