--- a/src/styles/Breakpoints.scss
+++ b/src/styles/Breakpoints.scss
@@ -1,18 +1,26 @@
 $breakpoints: (
-  "phone": 360px,
-  "phone-large": 420px,
-  "phone-wide": 480px,
-  "tablet-small": 640px,
-  "tablet": 768px,
-  "laptop-small": 1024px,
-  "laptop-wide": 1366px,
-  "laptop-wide-desktop": 1536px,
-  "desktop": 1800px,
-  "desktop-wide": 2560px,
+  "Mobile_S": 320px,
+  "Mobile_M": 390px,
+  "Mobile_L": 425px,
+  "Tablet": 768px,
+  "Laptop": 1024px,
+  "Laptop_L": 1366px,
+  "Desktop": 1800px,
+  "Desktop_L": 2560px,
+  "Vertical_Display": 1080px,
 );
 
 //Dark Theme
 $bg: #191919;
+$cd-bg: #262626;
+$modal-bg: #252525;
+$hover: #313131;
+$blur-bg: #1919196b;
+$border: #2d2d2d;
+$highlighted-blue: #263341;
+
+//Positive & Negative
+$kton-blue: #3fcdfc;
 
 @mixin breakpoint-mixin($width, $type: min) {
   @if map_has_key($breakpoints, $width) {
@@ -23,5 +31,12 @@ $bg: #191919;
     @media only screen and (#{$type}-width: $width) {
       @content;
     }
+  }
+}
+
+@mixin portrait-min-width-mixin($breakpoint) {
+  $minWidth: map-get($breakpoints, $breakpoint);
+  @media screen and (min-width: $minWidth) and (orientation: portrait) {
+    @content;
   }
 }
