--- a/src/styles/SideBanner.module.scss
+++ b/src/styles/SideBanner.module.scss
@@ -13,7 +13,7 @@
   mix-blend-mode: difference;
   z-index: 90;
 
-  @include breakpoint-mixin("laptop-small") {
+  @include breakpoint-mixin("Laptop") {
     width: 4%;
   }
 
