--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -19,7 +19,7 @@ body {
   background-attachment: fixed;
   //
 
-  @include breakpoint-mixin("laptop-small") {
+  @include breakpoint-mixin("Laptop") {
     background-repeat: repeat;
     background-size: 350px;
   }
@@ -29,11 +29,11 @@ body {
     padding: 0px;
     font-size: 20px;
 
-    @include breakpoint-mixin("laptop-small") {
+    @include breakpoint-mixin("Laptop") {
       font-size: 22px;
     }
 
-    @include breakpoint-mixin("desktop") {
+    @include breakpoint-mixin("Desktop") {
       font-size: 25px;
     }
   }
@@ -41,13 +41,17 @@ body {
   h1 {
     margin: 0px;
     padding: 0px;
-    font-size: 70px;
+    font-size: 65px;
 
-    @include breakpoint-mixin("laptop-small") {
+    @include breakpoint-mixin("Mobile_M") {
+      font-size: 70px;
+    }
+
+    @include breakpoint-mixin("Laptop") {
       font-size: 80px;
     }
 
-    @include breakpoint-mixin("desktop") {
+    @include breakpoint-mixin("Desktop") {
       font-size: 100px;
     }
   }
@@ -57,7 +61,7 @@ body {
     padding: 0px;
     font-size: 40px;
 
-    @include breakpoint-mixin("laptop-small") {
+    @include breakpoint-mixin("Laptop") {
       font-size: 60px;
     }
   }
