--- a/src/styles/BlogLandingPage.module.scss
+++ b/src/styles/BlogLandingPage.module.scss
@@ -8,7 +8,7 @@
   padding-bottom: 50px;
 }
 
-@include breakpoint-mixin("laptop-small") {
+@include breakpoint-mixin("Laptop") {
   .page::-webkit-scrollbar {
     height: 100%;
     background-color: rgb(45, 41, 41);
