--- a/src/styles/BlogSection.module.scss
+++ b/src/styles/BlogSection.module.scss
@@ -8,7 +8,7 @@
   flex-direction: column;
   background-color: transparent;
 
-  @include breakpoint-mixin("laptop-small") {
+  @include breakpoint-mixin("Laptop") {
     padding: 100px 1% 0px 1%;
   }
   // background-color: orange;
@@ -24,7 +24,7 @@
     mix-blend-mode: difference;
     z-index: 100;
 
-    @include breakpoint-mixin("laptop-small") {
+    @include breakpoint-mixin("Laptop") {
       padding: 10px 0px;
 
       &:hover {
@@ -40,7 +40,7 @@
       }
     }
 
-    @include breakpoint-mixin("desktop") {
+    @include breakpoint-mixin("Desktop") {
       &:hover {
         h1 {
           font-size: 110px;
