--- a/src/styles/Main.module.scss
+++ b/src/styles/Main.module.scss
@@ -13,13 +13,13 @@
   background-attachment: fixed;
   //
 
-  @include breakpoint-mixin("laptop-small") {
+  @include breakpoint-mixin("Laptop") {
     background-repeat: repeat;
     background-size: 350px;
   }
 }
 
-@include breakpoint-mixin("laptop-small") {
+@include breakpoint-mixin("Laptop") {
   .main::-webkit-scrollbar {
     height: 100%;
     background-color: rgb(45, 41, 41);
