--- a/src/styles/BlogPage.module.scss
+++ b/src/styles/BlogPage.module.scss
@@ -8,11 +8,10 @@
   box-sizing: border-box;
 
   .imageBanner {
-    height: 40dvh;
     width: 100%;
     overflow: hidden;
     position: relative;
-
+    max-height: 60dvh;
     img {
       width: 100%;
       height: 100%;
