--- a/src/styles/BlogPage.module.scss
+++ b/src/styles/BlogPage.module.scss
@@ -48,6 +48,13 @@
         cursor: pointer;
       }
     }
+
+    .markdown {
+      img {
+        width: 100%;
+        object-fit: cover;
+      }
+    }
   }
 }
 
