--- a/src/styles/Main.module.scss
+++ b/src/styles/Main.module.scss
@@ -1,21 +1,24 @@
 @import "./Breakpoints.scss";
 
 .main {
-  overflow-y: scroll;
   height: 100dvh;
   width: 100%;
-  z-index: 100;
+  display: flex;
+  justify-content: center;
+  overflow-y: scroll;
 
-  background-image: url("../../public/Resources/towel.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: 20% 60%;
-  background-attachment: fixed;
-  //
+  .main__content {
+    width: 70%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
 
-  @include breakpoint-mixin("Laptop") {
-    background-repeat: repeat;
-    background-size: 350px;
+    .main__content__portfolio {
+      width: 100%;
+      height: fit-content;
+      display: flex;
+      justify-content: space-between;
+    }
   }
 }
 
