--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -11,70 +11,71 @@ body {
   padding: 0px;
   position: relative; // set the position to relative to allow for scrolling
   font-family: "primaryFont";
-  color: white;
-  background-image: url("../../public/Resources/towel.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: 20% 60%;
-  background-attachment: fixed;
-  //
+  background-color: black;
+  color: rgb(207, 206, 206);
 
-  @include breakpoint-mixin("Laptop") {
-    background-repeat: repeat;
-    background-size: 350px;
-  }
-
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6,
   p {
     margin: 0px;
     padding: 0px;
-    font-size: 20px;
-
-    @include breakpoint-mixin("Laptop") {
-      font-size: 22px;
-    }
-
-    @include breakpoint-mixin("Desktop") {
-      font-size: 25px;
-    }
   }
 
-  h1 {
-    margin: 0px;
-    padding: 0px;
-    font-size: 60px;
+  // p {
+  //   margin: 0px;
+  //   padding: 0px;
+  //   font-size: 20px;
 
-    @include breakpoint-mixin("Mobile_M") {
-      font-size: 70px;
-    }
+  //   @include breakpoint-mixin("Laptop") {
+  //     font-size: 22px;
+  //   }
 
-    @include breakpoint-mixin("Laptop") {
-      font-size: 80px;
-    }
+  //   @include breakpoint-mixin("Desktop") {
+  //     font-size: 25px;
+  //   }
+  // }
 
-    @include breakpoint-mixin("Desktop") {
-      font-size: 100px;
-    }
-  }
+  // h1 {
+  //   margin: 0px;
+  //   padding: 0px;
+  //   font-size: 60px;
 
-  h2 {
-    margin: 0px;
-    padding: 0px;
-    font-size: 40px;
+  //   @include breakpoint-mixin("Mobile_M") {
+  //     font-size: 70px;
+  //   }
 
-    @include breakpoint-mixin("Laptop") {
-      font-size: 60px;
-    }
-  }
+  //   @include breakpoint-mixin("Laptop") {
+  //     font-size: 80px;
+  //   }
 
-  h3 {
-    margin: 0px;
-    padding: 0px;
-    font-size: 30px;
+  //   @include breakpoint-mixin("Desktop") {
+  //     font-size: 100px;
+  //   }
+  // }
 
-    @include breakpoint-mixin("laptop-wide") {
-      font-size: 45px;
-    }
-  }
+  // h2 {
+  //   margin: 0px;
+  //   padding: 0px;
+  //   font-size: 40px;
+
+  //   @include breakpoint-mixin("Laptop") {
+  //     font-size: 60px;
+  //   }
+  // }
+
+  // h3 {
+  //   margin: 0px;
+  //   padding: 0px;
+  //   font-size: 30px;
+
+  //   @include breakpoint-mixin("laptop-wide") {
+  //     font-size: 45px;
+  //   }
+  // }
 }
 
 @font-face {
