--- a/src/styles/Technogrophy1.module.scss
+++ b/src/styles/Technogrophy1.module.scss
@@ -1,10 +1,13 @@
 @import "./Breakpoints.scss";
 
 .Technogrophy1 {
-  height: 100dvh;
-  width: 40%;
   display: flex;
   flex-direction: column;
+  width: 100%;
+
+  @include breakpoint-mixin("Laptop") {
+    width: 40%;
+  }
 
   .Technogrophy1__title {
     width: 100%;
@@ -16,5 +19,36 @@
 
   .Technogrophy1__description {
     width: 100%;
+    margin-bottom: 35px;
+  }
+
+  .Technogrophy1__viewall {
+    width: 100%;
+
+    p {
+      margin-bottom: 15px;
+    }
+
+    .Technogrophy1__projects__containter {
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
+
+      @include breakpoint-mixin("Laptop") {
+        grid-template-columns: repeat(5, 1fr);
+      }
+
+      .Technogrophy1__project {
+        width: 100%;
+        height: 100px;
+        overflow: hidden;
+        cursor: pointer;
+
+        img {
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+        }
+      }
+    }
   }
 }
