Fix background image file name

--- a/src/styles/About3.module.scss
+++ b/src/styles/About3.module.scss
@@ -62,7 +62,7 @@
     box-sizing: border-box;
     padding: 40px 5px;
     direction: rtl;
-    background-image: url("/matte.jpg");
+    background-image: url("/Matte.jpg");
     //Fit background image to container
     background-size: cover;
     background-repeat: no-repeat;
