--- a/src/styles/Technogrophy2.module.scss
+++ b/src/styles/Technogrophy2.module.scss
@@ -15,15 +15,28 @@
 
     img {
       width: 100%;
-      height: 500px;
       object-fit: cover;
       border: 0.25px solid rgba(128, 128, 128, 0.554);
+      height: 400px;
+
+      @include breakpoint-mixin("Laptop") {
+        height: 350px;
+      }
+
+      @include breakpoint-mixin("Desktop") {
+        height: 500px;
+      }
     }
 
     .Technogrophy2__project__metashare {
       height: 5dvh;
-      width: 100%;
+      width: 90%;
       display: flex;
+      margin: 0px auto;
+
+      @include breakpoint-mixin("Laptop") {
+        width: 100%;
+      }
 
       span {
         height: 100%;
@@ -57,8 +70,12 @@
   }
 
   .Technogrophy2__project__metadata {
-    width: 100%;
-    margin-top: 20px;
+    width: 90%;
+    margin: 20px auto 0px auto;
+
+    @include breakpoint-mixin("Laptop") {
+      width: 100%;
+    }
 
     span {
       display: flex;
