--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -8,6 +8,8 @@ body {
   background-color: black;
   color: rgb(207, 206, 206);
   overflow-x: hidden; // prevent horizontal scrolling
+  background-image: url("/background.jpg");
+  // filter: grayscale(100%);
 
   h1,
   h2,
