--- a/src/styles/Technogrophy1.module.scss
+++ b/src/styles/Technogrophy1.module.scss
@@ -21,7 +21,9 @@
   //
   .Technogrophy1__description {
     width: 100%;
+    overflow-x: hidden;
     margin-bottom: 35px;
+    font-size: 25px;
   }
 
   .Technogrophy1__eyebanner {
