--- a/src/styles/Technogrophy2.module.scss
+++ b/src/styles/Technogrophy2.module.scss
@@ -19,6 +19,7 @@
       height: 400px;
       border-top: 0.25px solid rgba(128, 128, 128, 0.554);
       border-bottom: 0.25px solid rgba(128, 128, 128, 0.554);
+      cursor: pointer;
 
       @include breakpoint-mixin("Laptop") {
         border: 0.25px solid rgba(128, 128, 128, 0.554);
