--- a/src/styles/Breakpoints.scss
+++ b/src/styles/Breakpoints.scss
@@ -11,16 +11,7 @@ $breakpoints: (
 );
 
 //Dark Theme
-$bg: #191919;
-$cd-bg: #262626;
-$modal-bg: #252525;
-$hover: #313131;
-$blur-bg: #1919196b;
-$border: #2d2d2d;
-$highlighted-blue: #263341;
-
-//Positive & Negative
-$kton-blue: #3fcdfc;
+$mainColor: #b1825b;
 
 @mixin breakpoint-mixin($width, $type: min) {
   @if map_has_key($breakpoints, $width) {
