--- a/src/styles/About3.module.scss
+++ b/src/styles/About3.module.scss
@@ -48,6 +48,7 @@
     justify-content: center;
     align-items: center;
     cursor: pointer;
+    color: white;
     margin-bottom: 15px;
   }
 
@@ -85,12 +86,12 @@
       cursor: pointer;
 
       &:hover {
-        color: #ed944d;
+        color: $mainColor;
       }
     }
 
     .active {
-      color: #ed944d;
+      color: $mainColor;
     }
   }
 }
