--- a/src/styles/Header.module.scss
+++ b/src/styles/Header.module.scss
@@ -41,9 +41,13 @@
     left: 0;
     background: url("/lines.png") repeat top left;
     background-size: contain;
-    opacity: 0.2;
     z-index: 1;
     filter: invert(1);
+    opacity: 0.4;
+
+    @include breakpoint-mixin("Laptop") {
+      opacity: 0.2;
+    }
   }
 
   .Header__navigation {
